--- a/app/globals.css
+++ b/app/globals.css
@@ -177,6 +177,11 @@ body {
   transition: left 0.3s ease, right 0.3s ease;
 }
 
+.green-bg {
+  background-color: green !important;
+  color: #fff !important;
+}
+
 input[type="checkbox"] {
   opacity: 0;
   position: absolute;
